# ml_pm25

./: .gitignore  PM2.5 Data Cleaning.ipynb  README.md  feature_pipeline_metadata.json  ml_architecture.drawio  requirements.txt
airflow/: Dockerfile  README.md  docker-compose.yaml
airflow/dags/: ml_pipeline_dag.py
airflow/logs/scheduler/: latest
app-api/: Dockerfile  README.md  pyproject.toml  run.sh
app-api/api_src/: __main__.py  application.py  config.py  settings.py  utility.py  views.py
app-api/api_src/credentials/: temporal-wares-409805-453bb05f23af.json
app-api/api_src/schemas/: __init__.py  health.py  predictions.py
app-monitoring/: Dockerfile  README.md  pyproject.toml
app-monitoring/monitoring_src/: components.py  main.py  settings.py
app-predictions/: Dockerfile  README.md  pyproject.toml
app-predictions/predictions_src/: components.py  main.py  settings.py
artifacts/best_config:v0/: best_config.json
artifacts/best_model:v0/: best_model.pkl
batch_prediction_pipelines/: README.md  pyproject.toml
batch_prediction_pipelines/batch_prediction_pipelines_src/: batch.py  load_batch_data.py  monitoring.py  settings.py  utility.py
deploy/: README.md  app-docker-compose.local.yml  app-docker-compose.yml  ml-pipeline.sh
feature_pipelines/: README.md  clean_feature_store.py  extract.py  feature_view.py  load.py  pipeline.py  pyproject.toml  transform.py  utility.py  validation.py
feature_pipelines/feature_pipelines_src/: clean_feature_store.py  extract.py  feature_view.py  load.py  pipeline.py  transform.py  utility.py  validation.py
notebooks/: gcs.ipynb  settings.py  test.ipynb  utility.py
output/: feature_pipeline_metadata.json  feature_view_metadata.json  last_sweep_metadata.json
output/data/: PM25_Hourly.parquet  feature_pipeline_metadata.json
training_pipelines/: README.md  best_config.py  data.py  hyperparameter_tuning.py  pyproject.toml  train.py  utility.py
training_pipelines/training_pipelines_src/: best_config.py  data.py  hyperparameter_tuning.py  models.py  train.py  utility.py
wandb/: latest-run
(+411 files in other folders)
