[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = "Feature pipeline for extracting data using APIs, perform feature engineering and loading the data into a feature store."
authors = ["Leon Sun <leonsunwl@gmail.com>"]
readme = "README.md"
packages = [{include = "feature_pipelines_src"}]

[tool.poetry.dependencies]
python = ">=3.9"
hopsworks = "3.4.3"
fire = "^0.5.0"
yarl = "^1.9.4"
pandas = ">=1.3.5"
requests = "^2.28.2"
python-dotenv = ">=0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"